--- a/TestOnline/TestOnline/Views/ExamPage.xaml
+++ b/TestOnline/TestOnline/Views/ExamPage.xaml
@@ -3,13 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="TestOnline.Views.ExamPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label HeightRequest="110"  
-                   HorizontalOptions="FillAndExpand" 
-                   Text="Exam" 
-                   FontSize="40" 
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"/>
-            </StackLayout>
+        <ListView x:Name="ListView_Radio" ItemTapped="Handle_ItemTapped" ItemSelected="Handle_ItemSelected" IsGroupingEnabled="true" HasUnevenRows="true">
+            <!-- Group Header -->
+            <ListView.GroupHeaderTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout BackgroundColor="{StaticResource MediumGray}">
+                            <Label Margin="14,0" Text="{Binding Key}" FontSize="Large" VerticalOptions="CenterAndExpand"/>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.GroupHeaderTemplate>
+            <!--- Item Template -->
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal">
+                            <Label Margin="14,10" Text="{Binding Title}" FontSize="Large" VerticalTextAlignment="Center" HorizontalOptions="Start"/>
+                            <Grid HorizontalOptions="EndAndExpand" Margin="14,0">
+                                <Label Text="○" FontSize="20" TextColor="{StaticResource MediumGray}" VerticalTextAlignment="Center"/>
+                                <Label Text="●" FontSize="20" TextColor="{StaticResource BrandColor}" IsVisible="{Binding IsSelected}" VerticalTextAlignment="Center" />
+                            </Grid>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+            <!-- Footer -->
+            <ListView.Footer>
+                <StackLayout Margin="10,15">
+                    <Button Text="Apply" HorizontalOptions="Center" WidthRequest="150" Clicked="Handle_Clicked"/>
+                </StackLayout>
+            </ListView.Footer>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
